5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1582_1330.log
== SUBMITION (2019-03-24 09:18:57) 
-- CODE:
print(250//)
-- EXECUTION TIME:
0.150212
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print(250//)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:19:03) 
-- CODE:
print(250//6)
-- EXECUTION TIME:
0.140138
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:19:08) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.120499
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:19:37) 
-- CODE:
int(print(250/6))
-- EXECUTION TIME:
0.184703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    int(print(250/6))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:20:07) 
-- CODE:
round(print(250/6))
-- EXECUTION TIME:
0.154363
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round(print(250/6))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:20:22) 
-- CODE:
round(print(250/6),2)
-- EXECUTION TIME:
0.167894
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round(print(250/6),2)
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 09:20:33) 
-- CODE:
round(print(250.00/6),2)
-- EXECUTION TIME:
0.202918
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round(print(250.00/6),2)
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:10:52) 
-- CODE:
(print(round(250/6,2))
-- EXECUTION TIME:
0.154294
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:11:03) 
-- CODE:
(print(round(250.00/6,2))
-- EXECUTION TIME:
0.202633
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                             ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:11:41) 
-- CODE:
x=250//6
print(round(x,2))
-- EXECUTION TIME:
0.190674
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:11:56) 
-- CODE:
x=250/6
print(round(x,2))
-- EXECUTION TIME:
0.193372
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:26:10) 
-- CODE:
x=250/6
print(round(x,2))
texto="Amo o python"
print(texto.upper())
-- OUTPUT:
41.67
AMO O PYTHON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:26:43) 
-- CODE:
x=250/6
print(round(x,2))
texto="Amo o python"
print(texto.lower())
-- OUTPUT:
41.67
amo o python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:27:15) 
-- CODE:
x=250/6
print(round(x,2))
texto="Amo o python"
print(texto.lower())
x=2.7222
print(round(x,2))
-- OUTPUT:
41.67
amo o python
2.72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:52:03) 
-- CODE:
x=250/6
print(round(x,2))
nA=input("No. bilhetes A:  ")
nB=input("No. bilhetes B:  ")
nC=input("No. bilhetes C:  ")
pA=20
pB=30
pC=50
Renda=(pA*nA + pB*nB + pC*nC)
print(renda)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nB=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:52:29) 
-- CODE:
x=250/6
print(round(x,2))
nA=input("No. bilhetes A:  ")
nB=input("No. bilhetes B:  ")
nC=input("No. bilhetes C:  ")
pA=20
pB=30
pC=50
renda=(pA*nA + pB*nB + pC*nC)
print(renda)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nB=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:53:02) 
-- CODE:
x=250/6
print(round(x,2))
nA=input("No. bilhetes A:  ")
nB=input("No. bilhetes B:  ")
nC=input("No. bilhetes C:  ")
pA=20
pB=30
pC=50
renda=((pA*nA) + (pB*nB) + (pC*nC))
print(renda)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nB=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:53:51) 
-- CODE:
x=250/6
print(round(x,2))
nA=input("No. bilhetes A:  ")
nB=input("No. bilhetes B:  ")
nC=input("No. bilhetes C:  ")
pA=20
pB=30
pC=50
renda=(pA*nA) + (pB*nB) + (pC*nC)
print(renda)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nB=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:54:22) 
-- CODE:
x=250/6
print(round(x,2))
nA=input("No. bilhetes A:  ")
nB=input("No. bilhetes B:  ")
nC=input("No. bilhetes C:  ")
pA=1
pB=2
pC=3
renda=(pA*nA) + (pB*nB) + (pC*nC)
print(renda)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nB=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:54:39) 
-- CODE:
x=250/6
print(round(x,2))
nA=input("No. bilhetes A:  ")
nB=input("No. bilhetes B:  ")
nC=input("No. bilhetes C:  ")
pA=1
pB=1
pC=1
renda=(pA*nA) + (pB*nB) + (pC*nC)
print(renda)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nB=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:55:49) 
-- CODE:
x=250/6
print(round(x,2))
nA=int(input("No. bilhetes A:  "))
nB=int(input("No. bilhetes B:  "))
nC=int(input("No. bilhetes C:  "))
pA=1
pB=1
pC=1
renda=(pA*nA) + (pB*nB) + (pC*nC)
print(renda)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    nA=int(input())
ValueError: invalid literal for int() with base 10: 'xxx'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:04:53) 
-- CODE:
print(round(250/6,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:04:59) 
-- CODE:
print(round(250/6,2))

-- EXECUTION TIME:
0.227518
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
